Quit dialog added

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -206,6 +206,7 @@
 
 
     <LinearLayout
+        android:id="@+id/rate_us_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.85"
@@ -260,6 +261,7 @@
 
 
     <LinearLayout
+        android:id="@+id/feedback_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.85"
