Settings Activity Completed

--- a/app/src/main/res/layout/activity_choose_symbol.xml
+++ b/app/src/main/res/layout/activity_choose_symbol.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10"
+    android:background="@color/white"
     tools:context=".ChooseSymbolActivity">
 
 
