--- a/app/src/main/res/layout/activity_aiget_player_name.xml
+++ b/app/src/main/res/layout/activity_aiget_player_name.xml
@@ -50,7 +50,6 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:weightSum="10"
-        android:background="@drawable/rounded_corners"
         android:orientation="vertical"
         android:layout_weight="5.5">
 
@@ -86,6 +85,7 @@
             android:layout_marginLeft="40dp"
             android:maxLines="1"
             android:maxLength="10"
+            android:backgroundTint="#6E6E6E"
             android:hint="Nick Name"
             android:singleLine="true"
             android:textColor="#5C5C5C"
