--- a/app/src/main/res/layout/celebrate_dialog.xml
+++ b/app/src/main/res/layout/celebrate_dialog.xml
@@ -4,7 +4,6 @@
     android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
-
     android:orientation="vertical">
 
      <androidx.cardview.widget.CardView
@@ -14,6 +13,7 @@
 
         <LinearLayout
          android:layout_width="match_parent"
+         android:background="@color/white"
          android:layout_height="match_parent"
          android:orientation="vertical">
 
