--- a/app/src/main/res/layout/quit_dialog.xml
+++ b/app/src/main/res/layout/quit_dialog.xml
@@ -12,7 +12,9 @@
         app:cardCornerRadius="20dp">
 
         <LinearLayout
-         android:layout_width="match_parent"
+            android:background="@color/white"
+
+            android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
 
@@ -80,7 +82,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:text="Continue"
+                        android:text="Cancel"
                         android:textSize="18dp"
                         android:fontFamily="@font/poppins_regular"
                         android:textStyle="bold"
