--- a/app/src/main/res/layout/robot_win_dialog.xml
+++ b/app/src/main/res/layout/robot_win_dialog.xml
@@ -12,7 +12,8 @@
         app:cardCornerRadius="20dp">
 
         <LinearLayout
-         android:layout_width="match_parent"
+            android:background="@color/white"
+            android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
 
